tests/baselines/reference/parserAccessibilityAfterStatic7.errors.txt
parserAccessibilityAfterStatic7.ts(3,8): error TS1029: 'public' modifier must precede 'static' modifier.


==== parserAccessibilityAfterStatic7.ts (1 errors) ====
    class Outer
    {
    static public intI() {}
           ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }
    